[package]
name = "grpc"
authors = ["Gibin Biju <gibinbiju73@gmail.com>"]
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size
lto = true # Link Time Optimization
# codegen-units = 1 # slow down the compilation, especially Parallel Code Generation Units


[[bin]]
name = "server"
path = "src/server.rs"


[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = {version = "1.40.0", features = ["macros", "rt-multi-thread","fs","full"]} # Used for servers
tokio-util = { version = "0.7.12", features = ["compat","net"] }
prost = "0.13.3"  # for protobuf code generation
prost-types = "0.13.5"
tonic-async-interceptor = "0.12.0"
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] } 
tonic = {version = "0.13.0", features = ["tls-ring","gzip","prost"]} # Used for gRPC
tokio-stream = "0.1.17"

[build-dependencies]
tonic-build = {version = "0.13.0"}